--- a/Annuity_Factor_Calculator/UtilityCode.ipynb
+++ b/Annuity_Factor_Calculator/UtilityCode.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,8 +14,8 @@
     "\n",
     "cwd = os.getcwd()\n",
     "\n",
-    "mort_tables = pd.read_csv(cwd + '/Annuity_Factor_Calculator/MortTables/MortTables.csv')\n",
-    "mort_tables.to_parquet(cwd + '/Annuity_Factor_Calculator/MortTables/MortTables.parquet', index=False)"
+    "mort_tables = pd.read_csv(cwd + '/MortTables/MortTables.csv')\n",
+    "mort_tables.to_parquet(cwd + '/MortTables/MortTables.parquet', index=False)"
    ]
   },
   {
