Added tool for generating random tests that correspond with the SOA Calculator.
Added code to utility notebook to generate the list of mort tables/projection scales that are in both this tool's data set and in the SOA calculator.

--- a/Annuity_Factor_Calculator/UtilityCode.ipynb
+++ b/Annuity_Factor_Calculator/UtilityCode.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,6 +16,58 @@
     "\n",
     "mort_tables = pd.read_csv(cwd + '/MortTables/MortTables.csv')\n",
     "mort_tables.to_parquet(cwd + '/MortTables/MortTables.parquet', index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Create Mort Table info based on Mort table parquet\n",
+    "import pandas as pd\n",
+    "import pyarrow as pa\n",
+    "import os\n",
+    "\n",
+    "cwd = os.getcwd()\n",
+    "mort_table_info = pd.read_parquet(cwd + '/MortTables/MortTables.parquet')[['TableID', 'MortalityTableName', 'BaseYear']].drop_duplicates().reset_index()\n",
+    "mort_table_info.to_parquet(cwd + '/MortTables/MortTableInfo.parquet', index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Dump into 1D Mort Proj Parquet\n",
+    "\n",
+    "import pandas as pd\n",
+    "import pyarrow as pa\n",
+    "import os\n",
+    "\n",
+    "cwd = os.getcwd()\n",
+    "\n",
+    "mort_tables = pd.read_csv(cwd + '/ProjectionScales/MortProjectionScale_1d.csv')\n",
+    "mort_tables.to_parquet(cwd + '/ProjectionScales/MortProjectionScale_1d.parquet', index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Dump into 2D Mort Proj Parquet\n",
+    "\n",
+    "import pandas as pd\n",
+    "import pyarrow as pa\n",
+    "import os\n",
+    "\n",
+    "cwd = os.getcwd()\n",
+    "\n",
+    "mort_tables = pd.read_csv(cwd + '/ProjectionScales/MortProjectionScale_2d.csv')\n",
+    "mort_tables.to_parquet(cwd + '/ProjectionScales/MortProjectionScale_2d.parquet', index=False)"
    ]
   },
   {
@@ -56,6 +108,267 @@
     "\n",
     "with open(cwd+'/userInputs.txt', 'w') as UserInputs:\n",
     "    UserInputs.write(json.dumps(InputSet))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['RPH2014_Top25%_Employee', 'Pri2012_Bot25_Employee', 'PubTH_2010A_Employee', '1983_GAM_Basic', 'RP2000_Disabled', '1983_IAM', 'RPH2014_Employee', 'Pri2012_Top25_Employee', 'PubGH_2010_Employee', 'RPH2014_Bot25%_Employee', 'Pri2012_Total_Employee', 'RP1992_Disabled', 'RP2014_Top25%_Employee', 'PubS_2010A_Employee', 'PubNSH_2010_Disabled', 'Pri2012_Total_Disabled', 'PubG_2010_Employee', '1971_GAM', 'RP2014_BlueCol_Employee', '1951_GAM', 'PubTH_2010_Employee', 'RP2000_WhiteCol', 'PubG_2010B_Employee', 'RPH2014_WhiteCol_Employee', 'RP2014_Bot25%_Employee', 'CPM2014', 'PriH2012_Total_Employee', 'PubG_2010A_Employee', '2012_IAM_Period', 'PriH2012_Total_Disabled', 'RP1992_CombinedHealthy', 'PubSH_2010_Disabled', 'RP2000_Employee', 'PubS_2010_Employee', 'PubS_2010_Disabled', 'RP2014_Employee', 'PubGH_2010A_Employee', 'PubTH_2010B_Employee', 'CPM2014_Public', 'PubT_2010_Employee', 'PriH2012_WhiteCol_Employee', 'CPM2014_Private', '1994_GAM_Static', 'RP2000_BlueCol', 'PubNS_2010_Disabled', 'UP_94', 'PriH2012_BlueCol_Employee', 'PubGH_2010B_Employee', 'PubT_2010A_Employee', 'PubS_2010B_Employee', '1983_GAM', 'RP2014_WhiteCol_Employee', 'UP84_unisex', 'RPH2014_BlueCol_Employee', '2012_IAM_Basic', 'Pri2012_WhiteCol_Employee', 'Pri2012_BlueCol_Employee', 'PubSH_2010B_Employee', 'RP1992_Employee', 'PriH2012_Bot25_Employee', 'PriH2012_Top25_Employee', 'PubSH_2010_Employee', 'PubT_2010B_Employee', 'PubSH_2010A_Employee']\n",
+      "['Pri2012_Total_ContAnn', 'Pub_2010A_ContSurvivor', 'PriH2012_Top25_Retiree', '1983_GAM_Basic', 'Pri2012_WhiteCol_NondisAnn', 'PriH2012_BlueCol_NondisAnn', '1983_IAM', 'RP2000_Disabled', 'PubS_2010_Retiree', 'RP1992_HealthyAnnuit', 'PubTH_2010B_Retiree', 'RP1992_Disabled', 'RP2000_HealthyAnnuit', 'Pub_2010_ContSurvivor', 'PriH2012_WhiteCol_ContAnn', 'PubGH_2010A_Retiree', 'PriH2012_Total_ContAnn', 'PubSH_2010_Retiree', 'PubNSH_2010_Disabled', 'PubT_2010B_Retiree', 'PubH_2010B_ContSurvivor', 'PubH_2010A_ContSurvivor', 'RP2014_HealthyAnnuit', 'Pri2012_WhiteCol_ContAnn', 'Pri2012_Total_Disabled', '1971_GAM', 'PubTH_2010_Retiree', '1951_GAM', 'PriH2012_Bot25_Retiree', 'RP2000_WhiteCol', 'PubG_2010_Retiree', 'PubGH_2010_Retiree', 'PriH2012_WhiteCol_Retiree', 'CPM2014', 'PubH_2010_ContSurvivor', 'PriH2012_WhiteCol_NondisAnn', 'Pri2012_WhiteCol_Retiree', 'PubSH_2010B_Retiree', 'PriH2012_Total_Disabled', 'RP1992_CombinedHealthy', 'PubSH_2010_Disabled', 'Pri2012_BlueCol_ContAnn', 'PriH2012_Total_NondisAnn', 'PriH2012_BlueCol_ContAnn', 'PubS_2010_Disabled', '2012_IAM_Period', 'CPM2014_Public', 'CPM2014_Private', '1994_GAM_Static', 'RP2000_BlueCol', 'Pri2012_Total_NondisAnn', 'PubNS_2010_Disabled', 'UP_94', 'PubT_2010A_Retiree', 'PriH2012_BlueCol_Retiree', 'PubTH_2010A_Retiree', '1983_GAM', 'PubSH_2010A_Retiree', 'Pri2012_BlueCol_Retiree', 'PriH2012_Total_Retiree', 'PubS_2010A_Retiree', 'PubS_2010B_Retiree', 'Pri2012_BlueCol_NondisAnn', 'UP84_unisex', 'Pri2012_Bot25_Retiree', 'Pub_2010B_ContSurvivor', 'PubG_2010A_Retiree', 'Pri2012_Top25_Retiree', '2012_IAM_Basic', 'PubG_2010B_Retiree', 'Pri2012_Total_Retiree', 'PubT_2010_Retiree']\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Create List of all Mort tables within the tool\n",
+    "import pandas as pd\n",
+    "import pyarrow as pa\n",
+    "import os\n",
+    "\n",
+    "cwd = os.getcwd()\n",
+    "mort_table_set = set(pd.read_parquet(cwd + '/MortTables/MortTables.parquet')[['MortalityTableName']].drop_duplicates()['MortalityTableName'].tolist())\n",
+    "\n",
+    "#List of Pre-BCA table from soa calculator\n",
+    "SOA_Pre_BCA_set = {'1951_GAM'\n",
+    "                    , '1971_GAM'\n",
+    "                    , '1983_GAM'\n",
+    "                    , '1983_GAM_Basic'\n",
+    "                    , '1983_IAM'\n",
+    "                    , 'UP84_unisex'\n",
+    "                    , 'RP1992_CombinedHealthy'\n",
+    "                    , 'RP1992_Employee'\n",
+    "                    , 'RP1992_Disabled'\n",
+    "                    , '1994_GAM_Static'\n",
+    "                    , '1994_GAR'\n",
+    "                    , 'UP_94'\n",
+    "                    , 'RP2000_Employee'\n",
+    "                    , 'RP2000_Disabled'\n",
+    "                    , 'RP2000_CombinedHealthy'\n",
+    "                    , 'RP2000_BlueCol'\n",
+    "                    , 'RP2000_WhiteCol'\n",
+    "                    , 'RP2006_Employee'\n",
+    "                    , 'RP2006_Total'\n",
+    "                    , 'RP2006_Disabled'\n",
+    "                    , 'RP2006_BlueCol_Employee'\n",
+    "                    , 'RP2006_BlueCol'\n",
+    "                    , 'RP2006_WhiteCol_Employee'\n",
+    "                    , 'RP2006_WhiteCol'\n",
+    "                    , 'RP2006_Bot25%_Employee'\n",
+    "                    , 'RP2006_Bot25%'\n",
+    "                    , 'RP2006_Top25%_Employee'\n",
+    "                    , 'RP2006_Top25%'\n",
+    "                    , 'RPH2006_Employee'\n",
+    "                    , 'RPH2006_Disabled'\n",
+    "                    , 'RPH2006_BlueCol_EE'\n",
+    "                    , 'RPH2006_WhiteCol_EE'\n",
+    "                    , 'RPH2006_Bot25_EE'\n",
+    "                    , 'RPH2006_Top25_EE'\n",
+    "                    , 'PubG_2010_Employee'\n",
+    "                    , 'PubG_2010A_Employee'\n",
+    "                    , 'PubG_2010B_Employee'\n",
+    "                    , 'PubGH_2010_Employee'\n",
+    "                    , 'PubGH_2010A_Employee'\n",
+    "                    , 'PubGH_2010B_Employee'\n",
+    "                    , 'PubNS_2010_Disabled'\n",
+    "                    , 'PubNSH_2010_Disabled'\n",
+    "                    , 'PubS_2010_Disabled'\n",
+    "                    , 'PubS_2010_Employee'\n",
+    "                    , 'PubS_2010A_Employee'\n",
+    "                    , 'PubS_2010B_Employee'\n",
+    "                    , 'PubSH_2010_Disabled'\n",
+    "                    , 'PubSH_2010_Employee'\n",
+    "                    , 'PubSH_2010A_Employee'\n",
+    "                    , 'PubSH_2010B_Employee'\n",
+    "                    , 'PubT_2010_Employee'\n",
+    "                    , 'PubT_2010A_Employee'\n",
+    "                    , 'PubT_2010B_Employee'\n",
+    "                    , 'PubTH_2010_Employee'\n",
+    "                    , 'PubTH_2010A_Employee'\n",
+    "                    , 'PubTH_2010B_Employee'\n",
+    "                    , '2012_IAM_Basic'\n",
+    "                    , '2012_IAM_Period'\n",
+    "                    , 'Pri2012_Total_Employee'\n",
+    "                    , 'Pri2012_Total_Disabled'\n",
+    "                    , 'Pri2012_BlueCol_Employee'\n",
+    "                    , 'Pri2012_WhiteCol_Employee'\n",
+    "                    , 'Pri2012_Bot25_Employee'\n",
+    "                    , 'Pri2012_Top25_Employee'\n",
+    "                    , 'PriH2012_Total_Employee'\n",
+    "                    , 'PriH2012_Total_Disabled'\n",
+    "                    , 'PriH2012_BlueCol_Employee'\n",
+    "                    , 'PriH2012_WhiteCol_Employee'\n",
+    "                    , 'PriH2012_Bot25_Employee'\n",
+    "                    , 'PriH2012_Top25_Employee'\n",
+    "                    , 'RP2014_Employee'\n",
+    "                    , 'RP2014_Disabled'\n",
+    "                    , 'RP2014_Total'\n",
+    "                    , 'RP2014_BlueCol_Employee'\n",
+    "                    , 'RP2014_BlueCol'\n",
+    "                    , 'RP2014_WhiteCol_Employee'\n",
+    "                    , 'RP2014_WhiteCol'\n",
+    "                    , 'RP2014_Bot25%_Employee'\n",
+    "                    , 'RP2014_Bot25%'\n",
+    "                    , 'RP2014_Top25%_Employee'\n",
+    "                    , 'RP2014_Top25%'\n",
+    "                    , 'RPH2014_Employee'\n",
+    "                    , 'RPH2014_Disabled'\n",
+    "                    , 'RPH2014_BlueCol_Employee'\n",
+    "                    , 'RPH2014_WhiteCol_Employee'\n",
+    "                    , 'RPH2014_Bot25%_Employee'\n",
+    "                    , 'RPH2014_Top25%_Employee'\n",
+    "                    , 'CPM2014'\n",
+    "                    , 'CPM2014_Public'\n",
+    "                    , 'CPM2014_Private'}\n",
+    "\n",
+    "#List of Post-BCA table from soa calculator\n",
+    "SOA_Post_BCA_set = {'1951_GAM'\n",
+    "                    , '1971_GAM'\n",
+    "                    , '1983_GAM'\n",
+    "                    , '1983_GAM_Basic'\n",
+    "                    , '1983_IAM'\n",
+    "                    , 'UP84_unisex'\n",
+    "                    , 'RP1992_CombinedHealthy'\n",
+    "                    , 'RP1992_HealthyAnnuit'\n",
+    "                    , 'RP1992_Disabled'\n",
+    "                    , '1994_GAM_Static'\n",
+    "                    , '1994_GAR'\n",
+    "                    , 'UP_94'\n",
+    "                    , 'RP2000_HealthyAnnuit'\n",
+    "                    , 'RP2000_Disabled'\n",
+    "                    , 'RP2000_CombinedHealthy'\n",
+    "                    , 'RP2000_BlueCol'\n",
+    "                    , 'RP2000_WhiteCol'\n",
+    "                    , 'RP2006_Employee'\n",
+    "                    , 'RP2006_HealthyAnnuit'\n",
+    "                    , 'RP2006_Total'\n",
+    "                    , 'RP2006_Disabled'\n",
+    "                    , 'RP2006_BlueCol_HealthyAnnuit'\n",
+    "                    , 'RP2006_BlueCol'\n",
+    "                    , 'RP2006_WhiteCol_HealthyAnnuit'\n",
+    "                    , 'RP2006_WhiteCol'\n",
+    "                    , 'RP2006_Bot25%_HealthyAnnuit'\n",
+    "                    , 'RP2006_Bot25%'\n",
+    "                    , 'RP2006_Top25%_HealthyAnnuit'\n",
+    "                    , 'RP2006_Top25%'\n",
+    "                    , 'RPH2006_HlthyAnn'\n",
+    "                    , 'RPH2006_Disabled'\n",
+    "                    , 'RPH2006_BlueCol_HlthyAnn'\n",
+    "                    , 'RPH2006_WhiteCol_HlthyAnn'\n",
+    "                    , 'RPH2006_Bot25_HlthyAnn'\n",
+    "                    , 'RPH2006_Top25_HlthyAnn'\n",
+    "                    , 'Pub_2010_ContSurvivor'\n",
+    "                    , 'PubH_2010_ContSurvivor'\n",
+    "                    , 'PubH_2010A_ContSurvivor'\n",
+    "                    , 'PubH_2010B_ContSurvivor'\n",
+    "                    , 'Pub_2010A_ContSurvivor'\n",
+    "                    , 'Pub_2010B_ContSurvivor'\n",
+    "                    , 'PubG_2010_Retiree'\n",
+    "                    , 'PubG_2010A_Retiree'\n",
+    "                    , 'PubG_2010B_Retiree'\n",
+    "                    , 'PubGH_2010_Retiree'\n",
+    "                    , 'PubGH_2010A_Retiree'\n",
+    "                    , 'PubGH_2010B_Retiree'\n",
+    "                    , 'PubNS_2010_Disabled'\n",
+    "                    , 'PubNSH_2010_Disabled'\n",
+    "                    , 'PubS_2010_Disabled'\n",
+    "                    , 'PubS_2010_Retiree'\n",
+    "                    , 'PubS_2010A_Retiree'\n",
+    "                    , 'PubS_2010B_Retiree'\n",
+    "                    , 'PubSH_2010_Disabled'\n",
+    "                    , 'PubSH_2010_Retiree'\n",
+    "                    , 'PubSH_2010A_Retiree'\n",
+    "                    , 'PubSH_2010B_Retiree'\n",
+    "                    , 'PubT_2010_Retiree'\n",
+    "                    , 'PubT_2010A_Retiree'\n",
+    "                    , 'PubT_2010B_Retiree'\n",
+    "                    , 'PubTH_2010_Retiree'\n",
+    "                    , 'PubTH_2010A_Retiree'\n",
+    "                    , 'PubTH_2010B_Retiree'\n",
+    "                    , '2012_IAM_Basic'\n",
+    "                    , '2012_IAM_Period'\n",
+    "                    , 'Pri2012_Total_Retiree'\n",
+    "                    , 'Pri2012_Total_NondisAnn'\n",
+    "                    , 'Pri2012_Total_Disabled'\n",
+    "                    , 'Pri2012_Total_ContAnn'\n",
+    "                    , 'Pri2012_BlueCol_Retiree'\n",
+    "                    , 'Pri2012_BlueCol_NondisAnn'\n",
+    "                    , 'Pri2012_BlueCol_ContAnn'\n",
+    "                    , 'Pri2012_WhiteCol_Retiree'\n",
+    "                    , 'Pri2012_WhiteCol_NondisAnn'\n",
+    "                    , 'Pri2012_WhiteCol_ContAnn'\n",
+    "                    , 'Pri2012_Bot25_Retiree'\n",
+    "                    , 'Pri2012_Top25_Retiree'\n",
+    "                    , 'PriH2012_Total_Retiree'\n",
+    "                    , 'PriH2012_Total_ContAnn'\n",
+    "                    , 'PriH2012_Total_NondisAnn'\n",
+    "                    , 'PriH2012_Total_Disabled'\n",
+    "                    , 'PriH2012_BlueCol_Retiree'\n",
+    "                    , 'PriH2012_BlueCol_ContAnn'\n",
+    "                    , 'PriH2012_BlueCol_NondisAnn'\n",
+    "                    , 'PriH2012_WhiteCol_Retiree'\n",
+    "                    , 'PriH2012_WhiteCol_ContAnn'\n",
+    "                    , 'PriH2012_WhiteCol_NondisAnn'\n",
+    "                    , 'PriH2012_Bot25_Retiree'\n",
+    "                    , 'PriH2012_Top25_Retiree'\n",
+    "                    , 'RP2014_HealthyAnnuit'\n",
+    "                    , 'RP2014_Disabled'\n",
+    "                    , 'RP2014_Total'\n",
+    "                    , 'RP2014_BlueCol_HealthyAnnuit'\n",
+    "                    , 'RP2014_BlueCol'\n",
+    "                    , 'RP2014_WhiteCol_HealthyAnnuit'\n",
+    "                    , 'RP2014_WhiteCol'\n",
+    "                    , 'RP2014_Bot25%_HealthyAnnuit'\n",
+    "                    , 'RP2014_Bot25%'\n",
+    "                    , 'RP2014_Top25%_HealthyAnnuit'\n",
+    "                    , 'RP2014_Top25%'\n",
+    "                    , 'RPH2014_HealthyAnnuit'\n",
+    "                    , 'RPH2014_Disabled'\n",
+    "                    , 'RPH2014_BlueCol_HealthyAnnuit'\n",
+    "                    , 'RPH2014_WhiteCol_HealthyAnnuit'\n",
+    "                    , 'RPH2014_Bot25%_HealthyAnnuit'\n",
+    "                    , 'RPH2014_Top25%_HealthyAnnuit'\n",
+    "                    , 'CPM2014'\n",
+    "                    , 'CPM2014_Public'\n",
+    "                    , 'CPM2014_Private'}\n",
+    "\n",
+    "Pre_BCA_List = list(mort_table_set.intersection(SOA_Pre_BCA_set))\n",
+    "\n",
+    "Post_BCA_List = list(mort_table_set.intersection(SOA_Post_BCA_set))\n",
+    "\n",
+    "print(Pre_BCA_List)\n",
+    "print(Post_BCA_List)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['AA', 'BB_1D', 'G2', 'G3', 'CPM2014_B1', 'AA', 'BB_1D', 'G2', 'G3', 'CPM2014_B1']\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Create List of all projection scales\n",
+    "import pandas as pd\n",
+    "import pyarrow as pa\n",
+    "import os\n",
+    "\n",
+    "cwd = os.getcwd()\n",
+    "one_dim_list = pd.read_parquet(cwd + '/ProjectionScales/MortProjectionScale_1d.parquet')[['MortScaleName']].drop_duplicates()['MortScaleName'].tolist()\n",
+    "two_dim_list = pd.read_parquet(cwd + '/ProjectionScales/MortProjectionScale_1d.parquet')[['MortScaleName']].drop_duplicates()['MortScaleName'].tolist()\n",
+    "\n",
+    "mort_scale_list = one_dim_list + two_dim_list\n",
+    "print(mort_scale_list)"
    ]
   }
  ],
